<resources>
    <string name="app_name">Digimind</string>
    <string name="title_home">My Board</string>
    <string name="title_add">New Reminder</string>
    <string name="title_notifications">Notifications</string>
    <string name="reminder_name">What do yo want to remember?</string>
    <string name="when">When do yo want to it?</string>
    <string name="time">At what time?</string>
    <string name="done">Done</string>
    <string name="s">Sunday</string>
    <string name="m">Monday</string>
    <string name="t">Tuesday</string>
    <string name="w">Wednesday</string>
    <string name="x">Thursday</string>
    <string name="f">Friday</string>
    <string name="a">Saturday</string>

</resources>