<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="60dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logobrain"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dusty_rouse"
        android:textSize="20sp"
        android:text="@string/reminder_name"
        android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dusty_rouse"
                android:textSize="20sp"
                android:text="@string/when"
                android:layout_marginTop="20dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:stretchColumns="0"
                android:layout_height="wrap_content">
                <TableRow android:layout_height="wrap_content"
                    android:layout_width="50dp">
                   <TextView
                       android:layout_width="70dp"
                       android:textSize="20sp"
                       android:layout_height="wrap_content"
                       android:text="@string/m"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/checkMonday"/>

                </TableRow>

                <TableRow android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/t"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/checkTuesday"/>

                </TableRow>

                <TableRow android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/w"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/checkWednesday"/>

                </TableRow>
                <TableRow android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/x"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/checkThursday"/>

                </TableRow>
                <TableRow android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/f"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/checkFriday"/>

                </TableRow>
                <TableRow android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/a"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/checkSaturday"/>

                </TableRow>
                <TableRow android:layout_height="wrap_content"
                    android:layout_width="50dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/s"/>

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:id="@+id/checkSunday"/>

                </TableRow>



            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dusty_rouse"
                android:textSize="20sp"
                android:text="@string/time"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/et_task"/>
            <Button
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set time"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:background="?android:attr/selectableItemBackground"/>
            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dusty_rouse"
                android:text="@string/done"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="30dp" />

   </LinearLayout>

    </ScrollView>

</LinearLayout>